# metakit

./: CHANGES  CMakeLists.txt  NOTES-2.3.4  README  config.h.cmake  license.terms
demos/: CMakeLists.txt
include/: mk4.h
python/: CMakeLists.txt  PyRowRef.cpp  PyStorage.cpp  PyView.cpp  PyView.h  metakit.py  setup.py
src/: CMakeLists.txt  header.h
tcl/: CMakeLists.txt  Makefile.in  configure  configure.in  mk4tcl.cpp  mk4tcl.h  pkgIndex.tcl
tcl/tequila/: README
tcl/tests/: basic.test
tests/: CMakeLists.txt
unix/: Doxyfile  Makefile.in  configure  configure.in
